# wayr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
examples/: layer_shell.rs  subsurface.rs  toplevel.rs  typewriter.rs
src/: connection.rs  cursor.rs  error.rs  event.rs  event_loop.rs  geometry.rs  ime.rs  keyboard.rs  layer_shell.rs  lib.rs  output.rs  pointer.rs  presentation.rs  subsurface.rs  surface.rs  toplevel.rs  touch.rs
tests/: cursor_shape_smoke.rs  e2e-sway.conf  layer_shell_handshake.rs  output_enumeration.rs  run-e2e.sh  subsurface_attach.rs  toplevel_handshake.rs
