[package]
name = "wayr"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/wayr"
homepage = "https://kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
description = "Wayland-first windowing toolkit for Rust. Used by buffr, pikr, and future kryptic-sh GUI apps."
keywords = ["wayland", "windowing", "gui"]
categories = ["gui", "os::linux-apis"]

[features]
# Default keeps the toplevel + pointer + keyboard happy path. Every
# protocol module beyond the core is opt-in so consumers compile only
# what they need — pikr enables `layer-shell`, buffr enables
# `subsurface + text-input + clipboard + cursor-shape + fractional-scale`.
default = []
layer-shell = ["dep:wayland-protocols-wlr"]
subsurface = []
# zwp_text_input_v3 — IME composition + cursor positioning. Pulls in
# the wayland-protocols `unstable` set (where text-input-v3 still
# lives upstream despite being the de-facto IME protocol).
text-input = ["wayland-protocols/unstable"]
# `clipboard` feature dropped — use `hjkl-clipboard` crate instead.
# It implements wl_data_device over a raw Wayland socket
# (orthogonal to wayr's connection) with text + HTML + RTF +
# `image/png` MIME support, plus X11 / macOS / Windows / OSC52
# fallback. No reason to duplicate.
cursor-shape = []
fractional-scale = []

[dependencies]
# Used by layer-shell `Anchor` flags and text-input `ContentHint`.
bitflags = "2"

# raw-window-handle 0.6 trait crate. Implemented for Toplevel +
# EventLoop so wgpu / vulkano / glow consumers can build a surface
# without depending on a specific GPU crate version.
raw-window-handle = "0.6"

# Wayland protocol primitives + connection management.
# `system` feature enables ObjectId::as_ptr() — required for handing
# wl_proxy pointers to wgpu / vulkano / FFI consumers via
# raw-window-handle.
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }

# Logging — used internally for diagnostic warnings (missing globals,
# protocol errors). Consumer apps set their own subscriber.
tracing = "0.1"

# Event-loop driver. calloop sits over poll(); wayland-client provides
# a calloop adapter that registers the wl_display fd as a source.
calloop = "0.14"
calloop-wayland-source = "0.4"
libc = "0.2"

# Keymap + state translation. Wayland sends raw evdev scancodes +
# the keymap as a mmap'd xkb_keymap file; xkbcommon does the
# translation to keysyms + UTF-8 text.
xkbcommon = "0.8"

[dev-dependencies]
# examples/ smoke tests pull wgpu here once #6 (raw-window-handle)
# lands. Connection tests use tracing-subscriber for log surfacing.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Examples land per-phase. `toplevel` arrives with #9; `layer-shell`
# with #11; `subsurface` with #12; `ime` with #15; `clipboard` with #14.
